Terminada la funcion para presentar los dias a dar clases

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <form>
                 <div>
                     <label for="inputTotalHoras" class="form-label">Total Horas</label>
-                    <input type="number" class="form-control info__input" id="inputTotalHoras">
+                    <input type="number" class="form-control info__input" id="inputTotalHoras" value="200">
                 </div>
                 <div>
                     <label for="inputHorasDia" class="form-label">Horas por día</label>
-                    <input type="number" class="form-control info__input" id="inputHorasDia">
+                    <input type="number" class="form-control info__input" id="inputHorasDia" value="4">
                 </div>
                 <div>
                     <label for="inputFechaInicio" class="form-label">Inicio</label>
@@ -70,7 +70,7 @@
                     <div class="form-check select__select_day input-value select__check_wraper">
                         <input class="form-check-input select__checkbox" type="checkbox" id="lunCheck">
                         <label class="form-check-label select__label" for="lunCheck">Lunes</label>
-                        <input type="number" class="select__dia" id="inputHorasLun" data-index="1" disabled>
+                        <input type="number" class="select__dia" id="inputHorasLun" data-index="1" value="" disabled>
                     </div>
                     <div class="form-check select__select_day input-value select__check_wraper">
                         <input class="form-check-input select__checkbox" type="checkbox" id="marCheck">
