Modificaciones en el manejo de usuarios y conexion a base de datos

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <form>
                 <div>
                     <label for="inputTotalHoras" class="form-label">Total Horas</label>
-                    <input type="number" class="form-control info__input" id="inputTotalHoras" value="200">
+                    <input type="number" class="form-control info__input" id="inputTotalHoras" value="">
                 </div>
                 <div>
                     <label for="inputHorasDia" class="form-label">Horas por día</label>
-                    <input type="number" class="form-control info__input" id="inputHorasDia" value="4">
+                    <input type="number" class="form-control info__input" id="inputHorasDia" value="">
                 </div>
                 <div>
                     <label for="inputFechaInicio" class="form-label">Inicio</label>
