--- a/index.html
+++ b/index.html
@@ -12,12 +12,23 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS link -->
     <link rel="stylesheet" href="./css/main.css">
+
+    <link type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet" />
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Control de Fechas para Pedimento Docente</title>
 </head>
 
 <body>
     <header>
-        <h1 class="title">CALCULO DE CURSOS INFOTEP</h1>
+        <div>
+            <h1 class="title">PEDIMENTO DOCENTE INFOTEP</h1>
+        </div>
+        <div>
+            <a href="./login/login.html" class="admin__link title"><i class="fa-solid fa-user"></i></a>
+        </div>
     </header>
 
     <main class="wraper">
@@ -34,7 +45,7 @@
                 </div>
                 <div>
                     <label for="inputFechaInicio" class="form-label">Inicio</label>
-                    <input type="date" class="form-control info__input" id="inputFechaInicio">
+                    <input type="" class="form-control info__input txtDate" id="inputFechaInicio">
                 </div>
                 <div>
                     <label for="diaFechaInicio" class="form-label">Dia de inicio</label>
@@ -79,7 +90,7 @@
                     </div>
                     <div class="form-check select__select_day input-value select__check_wraper">
                         <input class="form-check-input select__checkbox" type="checkbox" id="mieCheck">
-                        <label class="form-check-label select__label" for="mieCheck">Miercoles</label>
+                        <label class="form-check-label select__label" for="mieCheck">Miércoles</label>
                         <input type="number" class="select__dia" id="inputHorasMie" data-index="3" disabled>
                     </div>
                     <div class="form-check select__select_day input-value select__check_wraper">
@@ -96,7 +107,7 @@
 
                 <div class="form-check select__select_day input-value select__check_wraper">
                     <input class="form-check-input select__checkbox" type="checkbox" id="sabCheck">
-                    <label class="form-check-label select__label" for="sabCheck">Sabado</label>
+                    <label class="form-check-label select__label" for="sabCheck">Sábado</label>
                     <input type="number" class="select__dia" id="inputHorasSab" data-index="6" disabled>
                 </div>
                 <div class="form-check select__select_day input-value select__check_wraper">
@@ -166,6 +177,41 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
+    <script type="text/javascript">
+        $(function () {
+            $("#inputFechaInicio").datepicker({
+                language: 'es',
+                dateFormat: 'dd/mm/yy',
+                changeMonth: true,
+                changeYear: true,
+                // minDate: '+0D'
+            });
+
+
+            $.datepicker.regional['es'] = {
+                closeText: 'Cerrar',
+                prevText: '<Ant',
+                nextText: 'Sig>',
+                currentText: 'Hoy',
+                monthNames: ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],
+                monthNamesShort: ['Ene', 'Feb', 'Mar', 'Abr', 'May', 'Jun', 'Jul', 'Ago', 'Sep', 'Oct', 'Nov', 'Dic'],
+                dayNames: ['Domingo', 'Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado'],
+                dayNamesShort: ['Dom', 'Lun', 'Mar', 'Mié', 'Juv', 'Vie', 'Sáb'],
+                dayNamesMin: ['Do', 'Lu', 'Ma', 'Mi', 'Ju', 'Vi', 'Sá'],
+                weekHeader: 'Sm',
+                dateFormat: 'dd/mm/yy',
+                firstDay: 1,
+                isRTL: false,
+                showMonthAfterYear: false,
+                yearSuffix: ''
+            };
+            $.datepicker.setDefaults($.datepicker.regional['es']);
+
+
+
+        });
+    </script>
 </body>
 
 </html>
